--- a/templates/edit.html
+++ b/templates/edit.html
@@ -6,12 +6,12 @@
 <body>
     <h1>Edit User</h1>
     
-    <form action="/edit" method="post">
-        <label for="pet_id">ID:</label><br>
-        <input type="text" id="pet_id" name="pet_id"><br><br>
+    <form action="{{ url_for('edit_user', user_id=doc._id) }}"  method="post" >
+        <!-- <label for="username">username</label><br>
+        <input type="text" id="username" name="username"><br><br> -->
         
-        <label for="new_breed">Breed:</label><br>
-        <input type="text" id="new_breed" name="new_breed"><br><br>
+        <label for="passw">new pass:</label><br>
+        <input type="text" id="passw" name="passw"><br><br>
         
         <input type="submit" value="Edit">
     </form>
