--- a/templates/add_pets.html
+++ b/templates/add_pets.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add User</title>
+    <title>Add Pet</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -64,23 +64,20 @@
 </head>
 <body>
     <div class="add-container">
-        <h1>New User</h1>
-        <form action="/add" method="POST">
+        <h1>New Pet</h1>
+        <form action="/add_pets" method="POST">
 
-            <label for="first_name">First Name:</label>
-            <input type="text" id="first_name" name="first_name" required>
+            <label for="name">Pet Name:</label>
+            <input type="text" id="name" name="name" required>
 
-            <label for="last_name">Last Name:</label>
-            <input type="text" id="last_name" name="last_name" required>
+            <label for="age">age:</label>
+            <input type="text" id="age" name="age" required>
 
-            <label for="address">Address:</label>
-            <input type="text" id="address" name="address" required>
+            <label for="breed">breed:</label>
+            <input type="text" id="breed" name="breed" required>
 
-            <label for="username">New Username:</label>
-            <input type="text" id="username" name="username" required>
-
-            <label for="passw"> New Password:</label>
-            <input type="password" id="passw" name="passw" required>
+            <label for="type">type:</label>
+            <input type="text" id="type" name="type" required>
 
             <input type="submit" value="Add">
         </form>
