--- a/templates/search.html
+++ b/templates/search.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Pets</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -87,6 +89,20 @@
 </head>
 
 <body>
+
+    <!-- Navigation Bar -->
+    <nav>
+        <a href="#" class="logo">SoulPet</a>
+        <ul>
+            <li><a href="{{ url_for('landing')}}">Home</a></li>
+            <li><a href="{{ url_for('index')}}">Profile</a></li>
+            <li><a href="{{ url_for('add_pets')}}">Add Pet</a></li>
+            <li><a href="{{ url_for('search')}}">Search</a></li>
+            <li><a href="{{ url_for('liked_pets')}}">Liked Pets</a></li>
+            <li><a href="{{ url_for('login')}}">Logout</a></li>
+        </ul>
+    </nav>
+
     <h1>Search for Pets</h1>
 
     <form action="/search" method="post">
